stop wide titles from overflowing on mobile

--- a/app/static/styles.scss
+++ b/app/static/styles.scss
@@ -663,6 +663,7 @@ ul.form-multicheck-columns {
       font-size: 110%;
       margin-top: 4px;
       margin-bottom: 0;
+      overflow: hidden;
     }
 
     .meta_row, .main_row, .utilities_row {
